Constants have been introduced to simplify values hiding.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="node_modules/oclazyload/dist/ocLazyLoad.min.js"></script>
 
 <script src="src/index.js"></script>
+<script src="src/consts/consts.js"></script>
 <script src="src/ra-app/ra-app.component.js"></script>
 
 <script src="src/services/api.service.js"></script>
