--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 <script src="src/ra-days/containers/ra-days-container.component.js"></script>
 <script src="src/ra-days/presentational/ra-days.component.js"></script>
 <script src="src/ra-days/presentational/ra-day-simplified.component.js"></script>
+<script src="src/ra-days/containers/ra-days-details-container.component.js"></script>
 </body>
 </html>
