--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 <script src="src/ra-days/presentational/ra-days.component.js"></script>
 <script src="src/ra-days/presentational/ra-day-simplified.component.js"></script>
 <script src="src/ra-days/containers/ra-days-details-container.component.js"></script>
+<script src="src/ra-days/presentational/ra-days-details.component.js"></script>
 </body>
 </html>
