Service for day details has been introduced.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <script src="src/ra-days/ra-days.route.config.js"></script>
 <script src="src/ra-days/services/weather.service.js"></script>
+<script src="src/ra-days/services/day-details.service.js"></script>
 <script src="src/ra-days/containers/ra-days-container.component.js"></script>
 <script src="src/ra-days/presentational/ra-days.component.js"></script>
 <script src="src/ra-days/presentational/ra-day-simplified.component.js"></script>
