Better way to load elements has been used.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <script src="src/index.js"></script>
 <script src="src/consts/consts.js"></script>
+<script src="src/lazy-load-configurations/days-details.config.js"></script>
 <script src="src/ra-app/ra-app.component.js"></script>
 
 <script src="src/services/api.service.js"></script>
