Lazy loading for list has been used.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 <script src="src/index.js"></script>
 <script src="src/consts/consts.js"></script>
 <script src="src/lazy-load-configurations/days-details.config.js"></script>
+<script src="src/lazy-load-configurations/days.config.js"></script>
 <script src="src/ra-app/ra-app.component.js"></script>
 
 <script src="src/services/api.service.js"></script>
 
 <script src="src/ra-days/ra-days.route.config.js"></script>
 <script src="src/ra-days/services/weather.service.js"></script>
-<script src="src/ra-days/containers/ra-days-container.component.js"></script>
-<script src="src/ra-days/presentational/ra-days.component.js"></script>
-<script src="src/ra-days/presentational/ra-day-simplified.component.js"></script>
 </body>
 </html>
